forum long string wrap fix
--HG--
branch : 3.4

--- a/template/default/SASS/bootstrap-custom.scss
+++ b/template/default/SASS/bootstrap-custom.scss
@@ -2968,6 +2968,9 @@ td.forum-response-column {
     .forum-post-message {
         margin: 5px 10px;
         padding-bottom: 32px;
+        word-break: break-all;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
     }
     .forum-post-footer {
         margin: 20px 0px 0px;
